2026-01-14 - svg 믹스인 적용 전 commit

--- a/assets/styles/mobile/layout/_header.scss
+++ b/assets/styles/mobile/layout/_header.scss
@@ -38,6 +38,12 @@
                 display: flex;
                 align-items: center;
                 @include mixins.mobile-touch-effect;
+
+                img {
+                    width: rem(80);
+                    height: rem(32);
+                    display: block;
+                }
             }
         }
 
