--- a/assets/styles/mobile/layout/_footer.scss
+++ b/assets/styles/mobile/layout/_footer.scss
@@ -19,8 +19,8 @@
 
         img,
         svg {
-            width: 100%;
-            height: 100%;
+            width: rem(48);
+            height: rem(20);
             display: block;
         }
 
