--- a/assets/styles/pc/pages/_search.scss
+++ b/assets/styles/pc/pages/_search.scss
@@ -317,8 +317,10 @@
     .product-grid {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        // 기본 4열 그리드p: rem(24);
+        // 기본 4열 그리드
+        gap: rem(24);
         row-gap: rem(60);
+        align-items: stretch; // 카드 높이 균등화
         margin-bottom: rem(80);
         margin-top: rem(40);
 
