--- a/assets/styles_backup_refactor_variables/pc/pages/_mypage.scss
+++ b/assets/styles_backup_refactor_variables/pc/pages/_mypage.scss
@@ -590,7 +590,7 @@
                         font-family: inherit;
                         cursor: text; // 텍스트 그룹 선택이 가능하도록 (Enable text segment selection)
 
-                        background: variables.$gray-50 url('/assets/icons/calendar.svg') no-repeat right rem(16) center;
+                        background: variables.$gray-50 url('/emart/assets/icons/calendar.svg') no-repeat right rem(16) center;
                         background-size: rem(20) rem(20);
 
                         &:focus {
