--- a/assets/styles_backup_refactor_variables/mobile.css
+++ b/assets/styles_backup_refactor_variables/mobile.css
@@ -1039,8 +1039,8 @@ body.mobile-body {
   width: 0.8125rem;
   height: 0.8125rem;
   background-color: currentColor;
-  -webkit-mask: url('/emart/assets/icons/product-tag.svg") no-repeat 50% 50%;
-  mask: url('/emart/assets/icons/product-tag.svg") no-repeat 50% 50%;
+  -webkit-mask: url("/assets/icons/product-tag.svg") no-repeat 50% 50%;
+  mask: url("/assets/icons/product-tag.svg") no-repeat 50% 50%;
   -webkit-mask-size: contain;
   mask-size: contain;
   margin-right: 0.125rem;
@@ -1050,8 +1050,8 @@ body.mobile-body {
   width: 0.8125rem;
   height: 0.8125rem;
   background-color: currentColor;
-  -webkit-mask: url('/emart/assets/icons/product-time.svg") no-repeat 50% 50%;
-  mask: url('/emart/assets/icons/product-time.svg") no-repeat 50% 50%;
+  -webkit-mask: url("/assets/icons/product-time.svg") no-repeat 50% 50%;
+  mask: url("/assets/icons/product-time.svg") no-repeat 50% 50%;
   -webkit-mask-size: contain;
   mask-size: contain;
   margin-right: 0.125rem;
@@ -1061,8 +1061,8 @@ body.mobile-body {
   width: 0.8125rem;
   height: 0.8125rem;
   background-color: currentColor;
-  -webkit-mask: url('/emart/assets/icons/icon-ban.svg") no-repeat 50% 50%;
-  mask: url('/emart/assets/icons/icon-ban.svg") no-repeat 50% 50%;
+  -webkit-mask: url("/assets/icons/icon-ban.svg") no-repeat 50% 50%;
+  mask: url("/assets/icons/icon-ban.svg") no-repeat 50% 50%;
   -webkit-mask-size: contain;
   mask-size: contain;
   margin-right: 0.125rem;
@@ -1072,8 +1072,8 @@ body.mobile-body {
   width: 0.8125rem;
   height: 0.8125rem;
   background-color: currentColor;
-  -webkit-mask: url('/emart/assets/icons/icon-cart-limit.svg") no-repeat 50% 50%;
-  mask: url('/emart/assets/icons/icon-cart-limit.svg") no-repeat 50% 50%;
+  -webkit-mask: url("/assets/icons/icon-cart-limit.svg") no-repeat 50% 50%;
+  mask: url("/assets/icons/icon-cart-limit.svg") no-repeat 50% 50%;
   -webkit-mask-size: contain;
   mask-size: contain;
   margin-right: 0.125rem;
@@ -1083,8 +1083,8 @@ body.mobile-body {
   width: 0.8125rem;
   height: 0.8125rem;
   background-color: currentColor;
-  -webkit-mask: url('/emart/assets/icons/sparkling.svg") no-repeat 50% 50%;
-  mask: url('/emart/assets/icons/sparkling.svg") no-repeat 50% 50%;
+  -webkit-mask: url("/assets/icons/sparkling.svg") no-repeat 50% 50%;
+  mask: url("/assets/icons/sparkling.svg") no-repeat 50% 50%;
   -webkit-mask-size: contain;
   mask-size: contain;
   margin-right: 0.125rem;
@@ -2036,7 +2036,7 @@ body.mobile-body {
   height: 2rem;
   border: 1.5px solid #444444;
   border-radius: 0.125rem;
-  background: url('/emart/assets/icons/fullview-arrow.svg") no-repeat center center;
+  background: url("/assets/icons/fullview-arrow.svg") no-repeat center center;
   background-size: 1.25rem 1.25rem;
   box-sizing: border-box;
   transition: all 0.2s;
@@ -2790,7 +2790,7 @@ body.mobile-body {
   display: block;
   width: 3.6875rem;
   height: 1.5rem;
-  background: url('/emart/assets/images/mobile/app-download/icon_eclub_title.svg") no-repeat center/contain;
+  background: url("/assets/images/mobile/app-download/icon_eclub_title.svg") no-repeat center/contain;
 }
 .app-download-page .club-section .section-desc {
   font-size: 1rem;
@@ -2924,7 +2924,7 @@ body.mobile-body {
   position: relative;
   width: 100%;
   height: 11.25rem;
-  background: url('/emart/assets/images/mobile/app-download/truck_delivery.png") no-repeat center bottom/contain;
+  background: url("/assets/images/mobile/app-download/truck_delivery.png") no-repeat center bottom/contain;
   height: 200px;
   flex-shrink: 0;
   align-self: stretch;
