main.js - 분리 작업 전 commit

--- a/assets/styles/mobile/layout/_header.scss
+++ b/assets/styles/mobile/layout/_header.scss
@@ -616,6 +616,14 @@
                         &:hover .keyword {
                             text-decoration: underline;
                         }
+
+
+                        &>:nth-child(3) {
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            width: rem(40) !important;
+                        }
                     }
                 }
             }
