--- a/assets/styles/pc/pages/_search.scss
+++ b/assets/styles/pc/pages/_search.scss
@@ -292,6 +292,7 @@
 
                         &.active {
                             color: $black;
+                            background: $gray-50;
                         }
 
                         svg {
