--- a/assets/styles/mobile.css
+++ b/assets/styles/mobile.css
@@ -1063,8 +1063,8 @@ body.mobile-body {
 
 .icon-tag {
   display: inline-block;
-  width: 1rem;
-  height: 1rem;
+  width: 0.875rem;
+  height: 0.875rem;
   background-color: currentColor;
   -webkit-mask: url("/assets/images/icons/icon-promo.svg") no-repeat 50% 50%;
   mask: url("/assets/images/icons/icon-promo.svg") no-repeat 50% 50%;
@@ -2816,6 +2816,12 @@ body.mobile-body {
 }
 .mobile-header .search-container .search-column.popular-column .keyword-list li:hover .keyword {
   text-decoration: underline;
+}
+.mobile-header .search-container .search-column.popular-column .keyword-list li > :nth-child(3) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2.5rem !important;
 }
 .mobile-header .gnb-scroll {
   overflow-x: auto;
@@ -4576,7 +4582,7 @@ custom-checkbox .custom-checkbox-wrap .label-text {
 
 .search-result-page {
   background-color: #ffffff;
-  padding-bottom: 2.5rem;
+  padding-bottom: 1.25rem;
 }
 .search-result-page custom-checkbox {
   display: flex;
