--- a/assets/styles/mobile/pages/_main.scss
+++ b/assets/styles/mobile/pages/_main.scss
@@ -703,8 +703,7 @@
     .slider-track {
         display: flex;
         width: 100%;
-        overflow-x: auto;
-        scroll-snap-type: x mandatory;
+        overflow: hidden;
         scrollbar-width: none;
 
         &::-webkit-scrollbar {
@@ -715,7 +714,6 @@
     .slide-item.banner-popcorn {
         flex: 0 0 100%;
         max-width: 100%;
-        scroll-snap-align: start;
         background-color: #FFDE00;
         overflow: hidden;
         position: relative;
